# PFN-job-application-tracker

./: .gitattributes  .gitignore  README.md  alembic.ini  gen_toml.py  kind-config.yml  package.json  pyproject.toml
.github/workflows/: check_deploy.yml
8bb58e99-c48c-46ef-a9d0-c5cf1aee7e8a/: backup_codes.txt  otp_secret.txt
alembic/: env.py
alembic/versions/: 190945f280b3_initial_migration.py  2025_08_03_0851-81436aa56ab1_1_migration.py  2025_08_03_0852-1abb3d6fd1e1_2_migration.py  2025_08_03_0930-78354cf5ff3f_added_a_many_to_many_relationship_.py  2025_08_03_1041-ff176d533158_added_mthod_to_d.py  2025_08_03_1112-2a20a9d38e54_added_car_table.py  2025_08_03_1554-36d7f046b04f_mig.py  2025_08_03_1637-f2eb80ba44a6_mig.py  2025_08_03_1712-f1868df06e9d_mig.py  2025_08_03_1904-5fb719161d59_mig.py  2025_08_03_1915-69cf074ba8b3_.py  2025_08_03_2236-68db291b5b5d_mig.py  2025_08_04_0602-159a7fb7345b_mig.py  63a99d7decb7_test_first_migration.py  988c28437e6b_1_migration.py  daedc8b5f6ae_2_migration.py
apps/client/: kind-deploy.yml  next.config.ts  package.json  playwright.config.ts  svgr.config.cjs  tailwind.config.ts  tsconfig.json
apps/server/: .dockerignore  Dockerfile  alembic.ini  gen_toml.py  kind-deploy.yml  kind-service.yml  package.json  pyproject.toml
apps/server/alembic/: env.py
b193efda-d22b-4e90-9855-8b8c18982337/: backup_codes.txt  otp_secret.txt
cheat_sheet/: mermaid.md  unicode.md
de7cac45-fef4-42d5-b245-d12cfd6bb617/: backup_codes.txt  otp_secret.txt
dev_stuff/: package.json  tsconfig.temp.json
postman/: ENV_VAR.postman_environment.json  TEST_API.postman_collection.json
postman/scripts/: get_tokens.js  refresh_token.js
scripts/: docker.zsh
shell/: .sql
src/: server.py
src/conf/: db.py  env.py  s3.py
src/constants/: reg.py
src/decorators/: err.py  res.py
src/lib/: data_structure.py  etc.py  form_check.py  logger.py  s3.py  system.py
src/middleware/: cors.py  form_data_parser.py  json_logger.py  log_json.py  query_parser.py  wrap_api.py  wrap_api_struc.py
src/models/: __init__.py  car.py  company.py  job.py  root.py  test.py  user.py
src/routes/: index.py
(+738 files in other folders)
