[project]
name = "pfn-job-application-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "AlexanderMatveev2908",email = "matveevalexander470@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "attrs (>=25.3.0,<26.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "regex (>=2025.7.34,<2026.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "aioboto3 (>=15.0.0,<16.0.0)",
    "sqlalchemy[asyncio] (>=2.0.42,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
pyright = "^1.1.403"
watchfiles = "^1.1.0"
black = "^25.1.0"
ruff = "^0.12.7"
tomlkit = "^0.13.3"
mypy-boto3-s3 = "^1.40.0"


[tool.black]
line-length = 79
target-version = ["py312"]
